# backend_first_hw

./: .editorconfig  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  run_alembic_revision.sh  run_dev.sh  setup.cfg
.github/workflows/: check.yaml  pylint.yaml
api/movies/: __init__.py
commands/: run_alembic_revision.sh
config/: __init__.py
controllers/assets/: __init__.py
controllers/movies/: __init__.py
controllers/moviesApi/: __init__.py
controllers/movies_api/: __init__.py
helpers/db/: __init__.py
helpers/models/: __init__.py
helpers/request/: __init__.py
helpers/response/: __init__.py  response.py
helpers/template/: __init__.py
migrations/: env.py
migrations/versions/: 35b131080511_init_movies_and_actors.py
models/: __init__.py  base.py
models/entities/: actors.py  movies.py  movies_actors.py
request_handler/: __init__.py
routes/: __init__.py  paths.py
server/: __init__.py  main.py  paths.py  routes.py
server/common/http/: __init__.py  methods.py  status.py
server/common/http_statuses/: main.py  types.py
server/common/regex/: __init__.py  main.py
server/db/: __init__.py  main.py
server/migrations/: env.py
server/migrations/versions/: 92ca083140d8_init_movies.py  9dcac04a52fd_init_movies.py  (+3 more)
server/tests/: test_pages.py
server/views/: base.jinja
views/: base.jinja  error.jinja
views/components/: header.jinja
views/movies/: all.jinja
views/movies_api/: form.jinja  movie.jinja  movies.jinja  result.jinja
views/styles/: styles.css
(+37 files in other folders)
