[tool.poetry]
name = "first-backend-project"
version = "0.1.0"
description = "A Homework task"
authors = ["Denis Romodanov <darvenommm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.28"
jinja2 = "^3.1.3"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.20240311"
alembic = "^1.13.1"
mypy = "^1.9.0"
py-mon = "^2.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
